# Baboon

./: .gitignore  Cargo.toml  README.md  RELEASE_CHANGELOG.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: help.json  script_docs.md
mappings/: conversion_mappings.json
src/: app.rs  format.rs  main.rs  script_docs_import.rs  source.rs  storage.rs  tool_commands.rs
src/app/: audio.rs  browser.rs  button_icons.rs  controller.rs  conversion.rs  editor.rs  export.rs  field_docs.rs  field_index.rs  find.rs  foundation.rs  function_editor.rs  game_assets.rs  help_docs.rs  journal.rs  keywords.rs  map_names.rs  material.rs  model_preview.rs  prefs.rs  script_docs.rs  shader.rs  sound_extract.rs  state.rs  style.rs  tag_icons.rs  tool_commands.rs  ui.rs
src/app/browser/: filter.rs  tree.rs
src/app/controller/: documents.rs  loading.rs  queries.rs  references.rs  saving.rs  terminal.rs  tools.rs  updates.rs
src/app/conversion/: companions.rs
src/app/editor/: bitmap.rs  diff.rs  model.rs  mutations.rs  sound.rs  tests.rs  value_parser.rs
src/app/export/: bitmap.rs  geometry.rs  import_info.rs  json.rs  shader_source.rs
src/app/foundation/: containers.rs  functions.rs  references.rs  tests.rs  traversal.rs  value_rows.rs  widgets.rs
src/app/function_editor/: graph.rs  h2.rs  h3.rs  mod.rs
src/app/map_names/: data.rs
src/app/material/: color_picker.rs
src/app/model_preview/: loading.rs  mod.rs  renderer.rs  variants.rs
src/app/shader/: editing.rs  h2.rs  render_method.rs  rows.rs  tests.rs  widgets.rs
src/app/state/: browser.rs  documents.rs  editing.rs  find.rs  prefs.rs  preview.rs  terminal.rs  worker.rs
src/app/tests/: browser_refresh.rs  button_icons.rs  classic_h2.rs  field_index.rs  first_run.rs  function_editor_h2.rs  function_editor_h3.rs  function_editor_routing.rs  keywords.rs  prefs_first_run.rs  script_docs_import.rs  script_docs_runtime.rs  storage.rs  style.rs  tag_icons.rs
src/app/ui/: dialogs.rs  find.rs  first_run.rs  help.rs  search_windows.rs  settings.rs  shell.rs  tests.rs  tool_commands.rs
src/source/: editing_kit.rs  index.rs  loading.rs  mod.rs  tree.rs
tool_commands/: halo2_mcc.json  halo3_mcc.json  haloce_mcc.json  haloreach_mcc.json
