# Standalone repo: its own workspace root so it doesn't get absorbed into a
# parent workspace. The blam-tags engine is a pinned Git dependency
# (camden-smallwood/blam-tags), not a submodule.
[workspace]
members = ["."]
default-members = ["."]

[package]
name = "baboon"
version = "0.1.4"
edition = "2024"
build = "build.rs"
default-run = "Baboon"

[[bin]]
name = "Baboon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blam-tags = { git = "https://github.com/camden-smallwood/blam-tags", rev = "8f314389dadd3c7de423a9e322195355198845d4", features = ["audio"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["svg"] }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
libc = "0.2"
rfd = "0.15"
rodio = { version = "0.20", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.test]
opt-level = 1
debug = false
